# Kestrel

./: .env.example  .gitignore  KESTREL_아키텍처_기술문서.md  PROGRESS.md  README.md  docker-compose.claude-cli.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_perf_indexes.py  0003_bookmarks.py  0004_community_anon.py  0005_tickets.py  0006_app_settings.py  0007_ai_base_url.py  0008_ai_credentials.py  0009_sandbox_sessions.py  0010_cve_lab_mappings.py  0011_sandbox_session_provenance.py  0012_synth_attempt_at.py  0013_lab_mapping_last_used.py  0014_lab_feedback.py  0015_vuln_domains.py  0016_synth_best_of_n.py  0017_mitre_sources.py  0018_external_keys.py  0019_kev_epss.py  0020_auth_profile_analysis.py  0021_ai_credentials_user_scope.py  0022_facets_indexes.py  0023_post_likes.py  0024_login_logs.py  0025_audit_logs.py  0026_user_assets_notifications.py  0027_email_verification.py  0028_agents.py  0029_agent_tokens.py  0030_agent_token_meta.py  0031_comment_analysis_id.py  0032_comment_analysis_backfill.py  0033_comment_peer_reassign.py  0034_analysis_likes.py  0035_notices.py  0036_ap_vendor_vuln_index.py  0037_default_analysis_public.py  0038_analysis_pipeline_metadata.py
backend/app/: main.py
backend/app/api/v1/: admin.py  agent_api.py  agents.py  analysis.py  analysis_records.py  assets.py  auth.py  bookmarks.py  claude_auth.py  community.py  cves.py  dashboard.py  deps.py  health.py  mcp.py  notifications.py  profile.py  reports.py  resources.py  router.py  sandbox.py  search.py  settings.py  stats.py  tickets.py
backend/app/core/: access_log.py  agent_tokens.py  audit.py  auth_tokens.py  config.py  database.py  logging.py  observability.py  rate_limit.py  redis_client.py  request_ip.py  security.py
backend/app/models/: __init__.py  ai_credential.py  analysis_result.py  audit_log.py  bookmark.py  community.py  cve_lab_mapping.py  login_log.py  notification.py  sandbox.py  settings.py  ticket.py  user_asset.py  vulnerability.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: analysis.py  sandbox.py  search.py  vulnerability.py
backend/app/scripts/: seed.py
backend/app/services/: agent_orchestrator.py  aggregate_snapshots.py  ai_analyzer.py  cwe_summaries.py  domain_classifier.py  email.py  enrichment.py  ingestion.py  notifications.py  notify.py  priority_signals.py  rate_limiter.py  reference_preview.py  search_reconcile.py  search_service.py  ssvc.py  summarizer.py
backend/app/services/parsers/: __init__.py  base.py  exploit_db.py  github_advisory.py  mitre.py  nvd.py
backend/app/services/sandbox/: __init__.py  catalog.py  classifier.py  lab_resolver.py  (+8 more)
backend/app/utils/: retry.py
backend/scripts/: backfill_domains.py  backfill_vuln_types.py  install_keychain_sync_launchd.sh  integration_generic_labs.py  refresh_and_sync_claude_creds.sh  reindex_meili.py  smoke_domains.py  smoke_lab_catalog.py  smoke_pr9k.py  smoke_pr9l.py  smoke_pr9n.py  smoke_pr9s.py  smoke_pr9v.py  smoke_search.py  sync_claude_creds_from_keychain.sh
backend/tests/: conftest.py  test_agent_analysis_metadata.py  test_health.py
(+247 files in other folders)
