[project]
name = "kestrel-backend"
version = "0.1.0"
description = "FastAPI backend for Kestrel — ingestion, search, and API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "apscheduler>=3.10.4",
    "redis>=5.2.0",
    "meilisearch>=0.33.0",
    "python-multipart>=0.0.17",
    "structlog>=24.4.0",
    "orjson>=3.10.0",
    "docker>=7.1.0",
    "pyyaml>=6.0",
    # Auth (PR 10-CN). passlib 은 bcrypt 4.x 와 호환 문제가 있어 bcrypt 를
    # 직접 사용한다 ('error reading bcrypt version' + 72-byte ValueError 회피).
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.2.0",
    # User-Agent 파싱 (PR 10-DK) — 접속 로그에 OS/브라우저/디바이스 상세 노출.
    "ua-parser>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]
sentry = ["sentry-sdk[fastapi]>=2.18.0"]
otel = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
